# KOD

./: .bash_history  .bashrc  .eslintrc.json  .gitconfig  .gitignore  .pre-commit-config.yaml  .python_history  .wget-hsts  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  reset-git.sh
.circleci/: config.yml
.config/pypoetry/: pyproject.toml
.dotnet/corefx/cryptography/crls/: 75d1b2ed.de05bb98.crl  bd6662f5.8ba5d856.crl  d16da424.cbeb964c.crl
.gk/: repoMapping.json
.gnupg/: pubring.kbx  pubring.kbx~  random_seed  trustdb.gpg
.local/share/CircleCI-language-server/: schema.json
.local/share/virtualenv/wheel/3.10/embed/3/: pip.json  setuptools.json  wheel.json
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/pip-24.3.1-py3-none-any/pip-24.3.1.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/setuptools-75.6.0-py3-none-any/setuptools/: _core_metadata.py  build_meta.py  dist.py  msvc.py  package_index.py  sandbox.py
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/setuptools-75.6.0-py3-none-any/setuptools-75.6.0.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/wheel-0.45.1-py3-none-any/wheel-0.45.1.dist-info/: RECORD
.local/share/virtualenv/wheel/3.13/embed/3/: pip.json
.local/share/virtualenv/wheel/3.13/image/1/CopyPipInstall/pip-24.3.1-py3-none-any/pip-24.3.1.dist-info/: RECORD
.ssh/: id_ed25519  id_ed25519.pub  known_hosts
scripts/: watch.py
src/python_app/: calculator.py  config.py  gemini_client.py  logger.py
tests/: sample.test.js  test_gemini.py  test_sample.py
(+82 files in other folders)
